Fix button spacing issue when displaying on mobile screens

--- a/src/app/main-menu/main-menu.component.css
+++ b/src/app/main-menu/main-menu.component.css
@@ -13,7 +13,7 @@
     margin-bottom: 1%;
 }
  
-#title-container img {
+#title-container img { 
     height: 250px;
     width: 240px;
 }
@@ -54,7 +54,6 @@
     border-radius: 15px;
     text-align: center;
     color: #16a085;
-    padding: 2%;
 }
 
 /*Mobile specific */
@@ -77,7 +76,7 @@
         margin-right: 5px;
     }
 
-    #new-flight, #weather, #view-log, #notams {
+    #new-flight, #weather, #view-log, #notams, #logout-button {
         margin-left: 5px;
         margin-right: 5px;
     }
